--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -62,6 +62,9 @@ on fs
 on post-fs
     # set RLIMIT_MEMLOCK to 64MB
     setrlimit 8 67108864 67108864
+    
+    # Stop service
+    stop vendor.sensors
 
 on late-fs
     wait_for_prop hwservicemanager.ready true
@@ -82,7 +85,6 @@ on post-fs-data
     chmod 0777 /vendor/bin/scancode_bin
 
 on early-boot
-    start vendor.sensors
 
 on boot
 # wuzhisen change Define cpu set for audio app. This is to optimize
@@ -94,6 +96,10 @@ on boot
 
 #xiong jiangxueqin To realize the communication between framework and thermal, we need to implement sys node in kernel
    chown system system /sys/class/thermal/thermal_message/sconfig
+
+# Touchpanel
+    chown system system /sys/touchpanel/double_tap
+    chmod 0664 /sys/touchpanel/double_tap
 
 #USB controller configuration
     setprop vendor.usb.rndis.func.name "gsi"
@@ -244,12 +250,11 @@ service closead /system/vendor/bin/displayf_bin s 0
     group root system graphics
     oneshot
     disabled
-
+    
 #add display by hanwenhao
 service displayfeature /system/bin/displayfeature
     class hal
     user root
-    interface vendor.xiaomi.hardware.displayfeature@1.0::IDisplayFeature default
     group system root
     oneshot
 
@@ -267,7 +272,7 @@ service PcbaConfigSet /system/vendor/bin/PcbaConfigSet
     group root system vendor_qti_diag
     oneshot
     seclabel u:r:PcbaConfigSet:s0
-
+    
 on boot
     start PcbaConfigSet
 
@@ -436,3 +441,40 @@ service checknv /system/bin/checknv
     group root system
     oneshot
     seclabel u:r:checknv:s0
+
+# Logcat Services
+service boot_log /system/bin/logcat -b all -D -f /cache/boot_log_full.txt
+    class main
+    user root
+    group root system
+    disabled
+    oneshot
+
+service boot_log_crash /system/bin/logcat -b crash -D -f /cache/boot_log_crash.txt
+    class main
+    user root
+    group root system
+    disabled
+    oneshot
+
+service boot_log_kernel /system/bin/logcat -b kernel -D -f /cache/boot_log_kernel.txt
+    class main
+    user root
+    group root system
+    disabled
+    oneshot
+
+on post-fs-data
+# Clear existing log and start the service
+    rm /cache/boot_log_full.txt
+    rm /cache/boot_log_crash.txt
+    rm /cache/boot_log_kernel.txt
+    start boot_log
+    start boot_log_crash
+    start boot_log_kernel
+
+on property:sys.boot_completed=1
+# Stop the logger service
+    stop boot_log
+    stop boot_log_crash
+    stop boot_log_kernel
